--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
   "scripts": {
     "test": "jest"
   },
+  "husky": { 
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix" 
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2"
-  },
-  "dependencies": {
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
     "prettier": "^2.1.1"
-  }
+  },
+  "dependencies": {}
 }
