--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --fix" 
+    "*.js": "eslint --fix --max-warnings 0" 
   },
   "author": "",
   "license": "ISC",
