--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "scripts": {
     "test": "jest"
   },
-  "husky": { 
+  "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.js": "eslint --fix --max-warnings 0" 
+    "*.js": "eslint --fix --max-warnings 0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
