--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -2,10 +2,9 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "jest": true
+        "es2021": true
     },
-    "extends":[ "eslint:recommended","plugin:prettier/recommended"],
+    "extends":["eslint:recommended","plugin:prettier/recommended"],
     "parserOptions": {
         "ecmaVersion": 12
     },
